--- a/moduler.html
+++ b/moduler.html
@@ -15,8 +15,8 @@
   och skriv "http-server", så går den igång och du får en URL.
 -->
 <script type="module">
-  import { createStr, x } from './modules/createStr.js';
+  import createStr from './modules/createStr.js';
   var str = createStr(8);
   console.log(str);
-  console.log("x=" + x);
+  //console.log("x=" + x);
 </script>
